--- a/Homework 3/css/awesome.css
+++ b/Homework 3/css/awesome.css
@@ -1,5 +1,5 @@
 .awesome {
-  padding: 100px 0;
+  padding: 86px 0;
   
 }
 .line {  
@@ -9,7 +9,7 @@
   margin: auto;
   margin-bottom: 36px;
 }
-.text {
+.description p{
   text-align: center;
   margin: auto;
   font-family: 'Open Sans';
@@ -53,7 +53,7 @@
   color: #333333;
 }
 
-.wesome-card__text {
+.wesome-card__text p{
   font-family: 'Open Sans';
   font-weight: 400;
   font-size: 14px;
