--- a/Homework 3/css/index.css
+++ b/Homework 3/css/index.css
@@ -1,6 +1,5 @@
 @import url(./cdn.css);
 @import url(./awesome.css);
-@import url();
 
 *{
    padding: 0;
@@ -21,8 +20,10 @@
 }
 
 .title {
-   font-size: 36px;
    margin: auto;
+   font-family: 'Raleway'; 
+   font-size: 36px;
+   font-style: normal;
    text-align: center;
    text-transform: uppercase;
    margin-bottom: 34px;
