--- a/Homework 3/css/awesome.css
+++ b/Homework 3/css/awesome.css
@@ -56,7 +56,7 @@
   color: #333333;
 }
 
-.wesome-card__text p{
+.awesome-card__text p{
   font-family: 'Open Sans';
   font-weight: 400;
   font-size: 14px;
