--- a/Homework 3/css/awesome.css
+++ b/Homework 3/css/awesome.css
@@ -1,13 +1,21 @@
 .awesome {
   padding: 80px 0;
 }
-.line {  
-  width: 64px;
+.line::before  {  
+  /* width: 64px;
   height: 2px;
   background-color: #E72424;
   margin: auto;
-  margin-bottom: 36px;
+  margin-bottom: 36px; */
+  content: '';
+  display: block;
+  margin: auto;
+  width: 64px;
+  height: 2px;
+  background-color:#E72424;
+  margin-bottom: 34px;
 }
+
 .awesome-description p {
   text-align: center;
   margin: auto;
