--- a/Homework 3/css/customers.css
+++ b/Homework 3/css/customers.css
@@ -36,7 +36,7 @@
    margin: 0%;
    width: 70px;
    height: 70px;
-   border: 1px solid black;
+   border: 1px none black;
    border-radius: 50%;
    display: flex;
    justify-content: center;
