--- a/Homework 3/css/awesome.css
+++ b/Homework 3/css/awesome.css
@@ -1,24 +1,9 @@
 .awesome {
   padding: 80px 0;
 }
-.line::before  {  
-  /* width: 64px;
-  height: 2px;
-  background-color: #E72424;
-  margin: auto;
-  margin-bottom: 36px; */
-  content: '';
-  display: block;
-  margin: auto;
-  width: 64px;
-  height: 2px;
-  background-color:#E72424;
-  margin-bottom: 34px;
-}
 
-.awesome-description p {
+.awesome-description {
   text-align: center;
-  margin: auto;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
@@ -41,7 +26,7 @@
   margin: 0 15px;
 }
 
-.awesome-card__img {
+.awesome-card__icons {
   margin: auto;
   width: 70px;
   height: 70px;
@@ -51,6 +36,21 @@
   justify-content: center;
   align-items: center; 
   margin-bottom: 30px;
+}
+
+.fa-bolt-lightning {
+  transform: scale(1.9);
+  color: #ed9121;
+}
+
+.fa-keyboard {
+  transform: scale(2);
+  color: #ed9121;
+}
+
+.fa-lightbulb {
+  transform: scale(1.9);
+  color: #ed9121;
 }
 
 .awesome-card__title {
