--- a/Homework 3/css/index.css
+++ b/Homework 3/css/index.css
@@ -1,9 +1,12 @@
 @import url(./cdn.css);
+@import url(./header.css);
+@import url(./social.css);
 @import url(./awesome.css);
 @import url(./pricing.css);
 @import url(./customers.css);
 @import url(./axure.css);
 @import url(./contact.css);
+@import url(./footer.css);
 
 * {
    padding: 0;
@@ -33,4 +36,14 @@
    text-transform: uppercase;
    margin-bottom: 34px;
    color: #212121;
+ }
+
+ .title::after { 
+   content: '';
+   display: block;
+   margin: auto;
+   width: 64px;
+   height: 2px;
+   background-color:#E72424;
+   margin-top: 36px;
  }
