--- a/Homework 3/css/customers.css
+++ b/Homework 3/css/customers.css
@@ -48,7 +48,13 @@
    object-fit: cover;
    object-position: center;
    height: 100%;
-   width: 100%; 
+   width: 100%;
+   transition: 0.2s; 
+}
+
+.customers-card__img:hover {
+   transform: scale(2);
+   transition: 0.2s;
 }
 
  .customers-card__text {
