--- a/Homework 3/css/axure.css
+++ b/Homework 3/css/axure.css
@@ -59,6 +59,7 @@
    transition: 0.4s;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.5);
+   transform: scale(1.2);
 }
  
 .axure-title {
