--- a/Homework 3/css/footer.css
+++ b/Homework 3/css/footer.css
@@ -11,7 +11,6 @@
 .footer-icons {
    margin-bottom: 18px;
    height: 23px;
-   border: 1px none black;
 }
 
 .footer-text {
@@ -30,7 +29,6 @@
    display: inline-block;
    margin-right: 11px;
    margin-left: 11px;
-
 }
 
 .footer-icons-link:hover {
@@ -39,6 +37,7 @@
    box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.6);
    background-color: white;
    border-radius: 5px;
+   transform: scale(1.2);
 }
 
 .fa-copyright {
