--- a/Homework 3/css/index.css
+++ b/Homework 3/css/index.css
@@ -17,7 +17,7 @@
 }
 
 .html {
-   font-family: 'Raleway','Open Sans', sans-serif;
+   font-family: 'Raleway','Open Sans','Roboto', sans-serif;
 }
 
 .conteiner {
