--- a/Homework 3/css/footer.css
+++ b/Homework 3/css/footer.css
@@ -44,3 +44,15 @@
    font-size: 10px;
    color: rgba(255, 255, 255, 0.5);
 }
+
+@media screen and (max-width: 500px) {
+   .footer-icons-link {
+     margin: 0 5px;
+   }
+ }
+
+ @media screen and (max-width: 300px) {
+   .footer-icons-link {
+     margin: 0px;
+   }
+ }
