--- a/Homework 3/css/contact.css
+++ b/Homework 3/css/contact.css
@@ -2,7 +2,7 @@
    padding: 80px 0;
 }
 
-.contact-description p {
+.contact-description {
    text-align: center;
    margin: auto;
    font-family: 'Open Sans';
@@ -21,54 +21,72 @@
    flex-wrap: wrap;
 }
 
-.contact-card-1 p {
-   margin-bottom: 32px;
-   font-family: 'Open Sans';
-   font-style: normal;
-   font-weight: 400;
-   font-size: 14px;
-   line-height: 19px;
-   color: #BDBDBD;
-
+.contact-button {
+   display: flex;
+   justify-content: center;
 }
 
-.contact-card-2 p {
-   font-family: 'Open Sans';
-   font-style: normal;
-   font-weight: 400;
-   font-size: 14px;
-   line-height: 19px;
-   color: #BDBDBD;
-   margin-bottom: 224px;
+
+.form {
+   display: flex;
+   justify-content: space-between;
+   margin-bottom: 28px;
+   width: 100%;
+   max-width: 1170px;
 }
 
-.contact-line::before {
-   content: '';
-   display: block;
-   margin: auto;
+.contact-form, .contact-card-item{
    width: 478px;
-   height: 1px;
-   background-color: #BDBDBD;
-   margin-bottom: 32px;
 }
 
-.contact-ddv {
-   background-color: black;
+.contact-form {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   height: 224px;
 }
 
-.contact-ddv-img {
-   align-items: center; 
-}
-
-.contact-ddv-text {
+button[name="contact-button"] {
+   border: 0;
+   width: 166px;
+   height: 42px;
    font-family: 'Open Sans';
    font-style: normal;
-   font-weight: 400;
-   font-size: 12px;
-   line-height: 16px;
+   font-weight: 600;
+   font-size: 15px;
+   line-height: 20px;
    text-align: center;
-   color: rgba(255, 255, 255, 0.5);
+   color: #FFFFFF;
+   background-color: #EC7979;
+   margin: auto;
+   transition: 0.3s;
 }
 
+button[name="contact-button"]:hover {
+   color: rgb(255, 255, 255);
+   transition: 0.4s;
+   background-color: #000000;
+   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+}
 
+textarea[name="message"] {
+   border: 0;
+   height: 224px;
+   border-bottom: 1px solid #BDBDBD;
+   width: 100%;
+   resize: none;
+}
 
+.contact-container {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   position: relative;
+ }
+ 
+ .contact-button {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
