--- a/Homework 3/css/customers.css
+++ b/Homework 3/css/customers.css
@@ -41,7 +41,7 @@
    justify-content: center;
    align-items: center;
    overflow: hidden;
-   
+   z-index: 2;
 }
 .customers-card__img img {
    transform: scale(1.2);
