--- a/Homework 3/css/header.css
+++ b/Homework 3/css/header.css
@@ -34,7 +34,7 @@
 .header-navigation-list {
    display: flex;
    align-items: center;
-   text-align: center;
+   flex-wrap: wrap;
 }
 
 .navigation-text {
@@ -51,8 +51,16 @@
 
 .navigation-text:hover {
    color: rgb(0, 0, 0);
+   text-decoration: underline;
    transition: 0.4s;
    background-color: white;
    box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.5);
-   border-radius: 50% ;
+   border-radius: 50%;
+}
+
+@media screen and (max-width: 767px) {
+   .navigation-text {
+      display: flex;
+      flex-direction: column;
+   }
 }
