--- a/Homework 3/css/contact.css
+++ b/Homework 3/css/contact.css
@@ -82,7 +82,7 @@ textarea[name="message"] {
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   position: relative;
+   /* position: relative; */
 }
  
  .contact-button {
