--- a/Homework 3/css/header.css
+++ b/Homework 3/css/header.css
@@ -45,17 +45,15 @@
    line-height: 20px;
    text-transform: capitalize;
    color: rgba(255, 255, 255, 0.7);
-   padding: 15px 24px;
-   transition: 0.1s;
+   margin-left: 24px;
+   margin-right: 24px;
+   border-bottom: 12px solid transparent;
 }
 
 .navigation-text:hover {
-   color: rgb(0, 0, 0);
-   text-decoration: underline;
-   transition: 0.4s;
-   background-color: white;
-   box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.5);
-   border-radius: 50%;
+   color: rgb(255, 0, 0);
+   border-bottom: 1px solid rgb(255, 0, 0);
+   padding-bottom: 12px;
 }
 
 @media screen and (max-width: 767px) {
