--- a/Homework 3/css/index.css
+++ b/Homework 3/css/index.css
@@ -2,6 +2,7 @@
 @import url(./header.css);
 @import url(./modern.css);
 @import url(./social.css);
+@import url(./tab-wrap.css);
 @import url(./awesome.css);
 @import url(./pricing.css);
 @import url(./customers.css);
