--- a/Homework 3/css/modern.css
+++ b/Homework 3/css/modern.css
@@ -12,11 +12,16 @@
    z-index: 1;
    padding: 0 15px;
    display: flex;
-   justify-content: space-around;
+   justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    text-align: left;
    margin: 0 -15px;
+}
+
+.modern-icons {
+   margin: 0 15px;
+   max-width: 540px;
 }
 
 .modern-icons-logo {
@@ -43,7 +48,6 @@
 }
 
 .modern-title {
-   max-width: 540px;
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
@@ -51,11 +55,12 @@
    line-height: 42px;
    color: #FFFFFF;
    margin-bottom: 39px;
+   text-transform: uppercase;
 }
 
 .modern-text {
    color: #86878B;
-   max-width: 260px;
+   width: 260px;
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 400;
@@ -72,9 +77,9 @@
    height: 2px;
    background-color:#ffffff;
    margin-top: 32px;
- }
+}
 
- .modern:after {
+.modern:after {
    content: '';
    position: absolute;
    top: 0;
@@ -110,50 +115,57 @@
 }
 
 .modern-form {
-   width: 370px;
-   background-color: #FFFFFF;
-   justify-content: center;
-   align-items: center;
-   border-radius: 10px;
-   overflow: hidden;
+   margin: 0 15px;
+}   
+
+form[name="form"] {
+  background-color: #FFFFFF;
+  width: 370px;
+  overflow: hidden;
+  border-radius: 10px;
 }
 
 .modern-form-text {
-   padding-top: 14.5px;
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: 27px;
-   display: flex;
-   align-items: center;
    text-align: center;
-   margin-bottom: 58px;
+   margin-bottom: 40px;
    color: #333333;
-   justify-content: center;
+   text-transform: capitalize;
 }
 
 .modern-form-text span {
    color: #EC7979;
-   padding-left: 4px;
-   padding-right: 4px;
+   text-transform: uppercase;
 }
 
 .item {
-   height: 260px;
+   padding-top: 14.5px;
    padding-left: 59px;
    padding-right: 59px;
    padding-bottom: 61px;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-around;
+}
+
+.modern-form-information {
+   margin-bottom: 20px;
 }
 
 input,
 input[type="text"] {
-  border: 0;
-  border-bottom: 1px solid #BDBDBD;
-  width: 100%;
+   border: 0;
+   border-bottom: 1px solid #BDBDBD;
+   width: 100%;
+   padding: 5px 5px;
+   outline: none;
+   font-family: 'Open Sans';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 19px;
+   color:#585757;
 }
 
 label {
@@ -168,30 +180,35 @@ label {
  button[name="modern-form-button"] {
    border: 0;
    width: 370px;
-   height: 54px;
+   line-height: 54px;
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 600;
    font-size: 15px;
-   line-height: 20px;
-   display: block;
-   margin: 0 auto;
    text-align: center;
+   text-transform: capitalize;
    transition: 0.2s;
    background-color: #EC7979;
    color: white;
+   border: 4px solid #EC7979;
  }
 
  button[name="modern-form-button"]:hover {
-   color: rgb(255, 255, 255);
-   transition: 0.4s;
+   color: rgb(180, 180, 180);
+   transition: 0.2s;
    background-color: #000000;
+   border-bottom-left-radius: 10px;
+   border-bottom-right-radius: 10px;
 }
 
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 998.68px) {
    .modern-link {
       margin-bottom: 10px;
    }
+}
+
+.modern-form-information:last-child {
+   margin: 0;
 }
 
 
