--- a/Homework 3/css/header.css
+++ b/Homework 3/css/header.css
@@ -1,6 +1,9 @@
 .header {
    background-color: black;
    padding: 20px 0;
+   position: sticky;
+    top: 0;
+    z-index: 5;
 }
 
 .header-wrap {
