--- a/Homework 3/css/modern.css
+++ b/Homework 3/css/modern.css
@@ -5,6 +5,7 @@
    background-position: center;
    background-size: cover;
    position: relative;
+   height: calc(100vh-75px);
 }
 
 .modern-wrap {
@@ -14,9 +15,8 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
-   flex-wrap: wrap;
-   text-align: left;
-   margin: 0 -15px;
+   flex-wrap: wrap; 
+   margin: 0 -15px; 
 }
 
 .modern-icons {
@@ -102,7 +102,6 @@
    font-weight: 600;
    font-size: 15px;
    line-height: 20px;
-   text-align: center;
    transition: 0.2s;
 }
 
@@ -203,12 +202,26 @@ label {
 
 @media screen and (max-width: 998.68px) {
    .modern-link {
+      margin: auto;
       margin-bottom: 10px;
    }
+   .modern-wrap {
+      justify-content: center;
+      align-items: center;
+   }
 }
+
+
 
 .modern-form-information:last-child {
    margin: 0;
 }
 
-
+@media screen and (max-width: 410px) {
+   form[name="form"] {
+      width: 280px;
+   }
+   button[name="modern-form-button"] {
+      width: 280px;
+   }
+}
