--- a/Homework 3/css/social.css
+++ b/Homework 3/css/social.css
@@ -9,7 +9,6 @@
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
-   text-align: center;
    margin: 0 -15px;
 }
 
@@ -141,4 +140,22 @@
    transform: rotate(45deg);
 }
 
+@media screen and (max-width: 964px) {
+   .social-text {
+      margin-bottom: 10px;
+   }
+   .social-icons {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 10px;
+   }
+   .social-icons:first-child{
+      padding-top: 0;
+   }
+
+    .fa-pinterest-aloc:hover {
+      transform: scale(1);
+      transform: skew(-10deg, -10deg)
+   }
+} 
 
