--- a/Homework 3/css/tab-wrap.css
+++ b/Homework 3/css/tab-wrap.css
@@ -35,7 +35,6 @@
 .header-tab--btn:hover {
    transition: 0.3s;
    background-color: #EC7979;
-
 }
 
 .content-tab-img {
@@ -104,4 +103,35 @@
    background-color: #000000;
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
    transform: scale(1.2);
+}
+@media screen and (max-width: 998.67px) {
+   .content-tab__item-button {
+      margin: auto;
+      margin-bottom: 10px;
+   }
+}
+
+@media screen and (max-width: 942px) {
+   .tab-wrap {
+      flex-direction: column;
+   }
+   .content-tab__item {
+      flex-direction: column;
+      align-items: center;
+   }
+   .header-tab {
+      flex-direction: row;
+      justify-content: space-around;
+   }
+   .header-tab--btn {
+      margin: 0 15px;
+      margin-bottom: 10px;
+   }
+
+}
+
+@media screen and (max-width: 600px) {
+   .header-tab {
+      justify-content: space-between;
+   }
 }
