--- a/Homework 3/css/tab-wrap.css
+++ b/Homework 3/css/tab-wrap.css
@@ -46,6 +46,11 @@
    justify-content: space-around;
 }
 
+.content-tab__item-none {
+   display: none;
+   justify-content: space-around;
+}
+
 .content-tab__item-information {
    max-width: 572px;   
    margin: 0 15px;
@@ -104,6 +109,7 @@
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
    transform: scale(1.2);
 }
+
 @media screen and (max-width: 998.67px) {
    .content-tab__item-button {
       margin: auto;
